--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "rippleui": "^1.12.1",
+    "vite-plugin-pwa": "^0.17.2",
     "zukeeper": "^1.0.2",
     "zustand": "^4.4.6"
   },
